<resources>
    <string name="app_name">TopQuiz</string>
    <string name="welcome">Welcome! What\'s your name ?</string>
    <string name="please_type">Please type your name</string>
    <string name="letsplay">Let\'s Play</string>
    <string name="question1">What is the capital of Turkey?</string>
    <string name="answer1">Istanbul</string>
    <string name="answer2">Ankara</string>
    <string name="answer3">Antalya</string>
    <string name="answer4">Alep</string>
    <string name="question2">When Michael Jordan played for the Chicago Bulls, how many NBA Championships did he win?</string>
    <string name="answer21">3</string>
    <string name="answer22">5</string>
    <string name="answer23">6</string>
    <string name="answer24">9</string>
    <string name="question3">What country won the very first FIFA World Cup in 1930?</string>
    <string name="answer31">Uruguay</string>
    <string name="answer32">Brazil</string>
    <string name="answer33">Germany</string>
    <string name="answer34">Argentina</string>
    <string name="question4">When did the first man land on the moon?</string>
    <string name="answer41">1958</string>
    <string name="answer42">1962</string>
    <string name="answer43">1967</string>
    <string name="answer44">1969</string>
    <string name="question5">What year was the very first model of the iPhone released?</string>
    <string name="answer51">2003</string>
    <string name="answer52">2005</string>
    <string name="answer53">2007</string>
    <string name="answer54">2009</string>
    <string name="question6">What was Twitter\’s original name?</string>
    <string name="answer61">Twitty</string>
    <string name="answer62">Twttr</string>
    <string name="answer63">Birdy</string>
    <string name="answer64">BlueTweet</string>
    <string name="question7">Which planet has the most gravity?</string>
    <string name="answer71">Jupiter</string>
    <string name="answer72">Earth</string>
    <string name="answer73">Pluton</string>
    <string name="answer74">Mercury</string>
    <string name="question8">Which country invented tea?</string>
    <string name="answer81">Japan</string>
    <string name="answer82">England</string>
    <string name="answer83">Vietnam</string>
    <string name="answer84">China</string>
    <string name="question9">Which organ has four chambers?</string>
    <string name="answer91">Heart</string>
    <string name="answer92">Brain</string>
    <string name="answer93">Liver</string>
    <string name="answer94">Kidneys</string>
    <string name="goodA">Good Answer!</string>
    <string name="badA">Bad Answer!</string>
    <string name="congrats">Congrats</string>
    <string name="score">Your score is :</string>
    <string name="onFour">on 4.</string>
    <string name="greetuser">"Bon retour, %1$s \nVotre score est de : %2$d \nVotre score de la partie précédente était %3$d \nVotre meilleur score est de : %4$d \nferiez-vous mieux ??"</string>


</resources>
