<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:orientation="vertical"
    android:textColor="@color/textColor"
    tools:context=".controller.MainActivity">

    <TextView
        android:id="@+id/activity_main_greeting_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor"
        android:padding="20dp"
        android:text="@string/welcome" />

    <EditText
        android:id="@+id/activity_main_name_input"
        android:singleLine="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColorHint="@color/textColor"
        android:hint="@string/please_type" />

    <Button
        android:id="@+id/activity_main_play_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/textColor"
        android:layout_marginTop="20dp"
        android:padding="30dp"
        android:text="@string/letsplay" />

    <Switch
    android:id="@+id/switchMain"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="100dp"
    android:layout_marginLeft="100dp"
    android:textColor="@color/textColor"

    android:layout_marginEnd="100dp"
    android:text="Mode Jour/Nuit" />




</LinearLayout>